[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/ascii_tileset.png" type="Texture" id=1]
[ext_resource path="res://scenes/player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/UI/UI.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/C64_Pro-STYLE.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://resources/enemies/goblin2.tres" type="Resource" id=5]
[ext_resource path="res://scenes/UI/console.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/enemies/goblin.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/main.gd" type="Script" id=8]
[ext_resource path="res://scenes/enemies/enteties.gd" type="Script" id=9]
[ext_resource path="res://scenes/enemies/knight.tscn" type="PackedScene" id=10]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 2, 2 )

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=10]
0/name = "ascii_tileset.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 96, 128 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "ascii_tileset.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 96, 0, 64, 64 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 32, 32 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 14 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 24, 200 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 128, 200 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 24, 200 )

[sub_resource type="DynamicFont" id=11]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="main" type="Node2D"]
script = ExtResource( 8 )

[node name="mouse_area" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="mouse_area"]
shape = SubResource( 12 )

[node name="mouseover_timer" type="Timer" parent="mouse_area"]
unique_name_in_owner = true
one_shot = true

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 0, -32 )
tile_set = SubResource( 10 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -262140, 1, 1, -262139, 1, 1, -262138, 1, 1, -262137, 1, 1, -262136, 1, 1, -262135, 1, 1, -262134, 1, 1, -262133, 1, 1, -262132, 0, 65536, -262131, 0, 65537, -262130, 0, 65537, -262129, 0, 65537, -262128, 0, 65537, -262127, 0, 65537, -262126, 0, 65537, -262125, 0, 65538, -262124, 1, 1, -262123, 1, 1, -262122, 1, 1, -262121, 1, 1, -262120, 1, 1, -262119, 1, 1, -262118, 1, 1, -262117, 1, 1, -262116, 1, 1, -196604, 1, 1, -196603, 1, 1, -196602, 1, 1, -196601, 1, 1, -196600, 1, 1, -196599, 1, 1, -196598, 1, 1, -196597, 1, 1, -196596, 0, 131072, -196595, 1, 0, -196594, 1, 0, -196593, 1, 0, -196592, 1, 0, -196591, 1, 0, -196590, 1, 0, -196589, 0, 131074, -196588, 1, 1, -196587, 1, 1, -196586, 1, 1, -196585, 1, 1, -196584, 1, 1, -196583, 1, 1, -196582, 1, 1, -196581, 1, 1, -196580, 1, 1, -131068, 1, 1, -131067, 1, 1, -131066, 1, 1, -131065, 1, 1, -131064, 1, 1, -131063, 1, 1, -131062, 1, 1, -131061, 1, 1, -131060, 0, 131072, -131059, 1, 0, -131058, 1, 0, -131057, 1, 0, -131056, 1, 0, -131055, 1, 0, -131054, 1, 0, -131053, 0, 131074, -131052, 1, 1, -131051, 1, 1, -131050, 1, 1, -131049, 1, 1, -131048, 1, 1, -131047, 1, 1, -131046, 1, 1, -131045, 1, 1, -131044, 1, 1, -65532, 1, 1, -65531, 1, 1, -65530, 1, 1, -65529, 1, 1, -65528, 1, 1, -65527, 1, 1, -65526, 1, 1, -65525, 1, 1, -65524, 0, 131072, -65523, 1, 0, -65522, 1, 0, -65521, 1, 0, -65520, 1, 0, -65519, 1, 0, -65518, 1, 0, -65517, 0, 131074, -65516, 1, 1, -65515, 1, 1, -65514, 1, 1, -65513, 1, 1, -65512, 1, 1, -65511, 1, 1, -65510, 1, 1, -65509, 1, 1, -65508, 1, 1, 0, 1, 1, 1, 1, 1, 2, 1, 1, 3, 1, 1, 4, 1, 1, 5, 1, 1, 6, 1, 1, 7, 1, 1, 8, 1, 1, 9, 1, 1, 10, 1, 1, 11, 1, 1, 12, 0, 131072, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 0, 131074, 20, 1, 1, 21, 1, 1, 22, 1, 1, 23, 1, 1, 24, 1, 1, 25, 1, 1, 26, 1, 1, 27, 1, 1, 28, 1, 1, 29, 1, 1, 30, 1, 1, 31, 1, 1, 65536, 1, 1, 65537, 1, 1, 65538, 1, 1, 65539, 1, 1, 65540, 1, 1, 65541, 1, 1, 65542, 1, 1, 65543, 1, 1, 65544, 1, 1, 65545, 1, 1, 65546, 1, 1, 65547, 1, 1, 65548, 0, 196608, 65549, 0, 196609, 65550, 0, 196609, 65551, 1, 65536, 65552, 0, 196609, 65553, 0, 196609, 65554, 0, 196609, 65555, 0, 196610, 65556, 1, 1, 65557, 1, 1, 65558, 1, 1, 65559, 1, 1, 65560, 1, 1, 65561, 1, 1, 65562, 1, 1, 65563, 1, 1, 65564, 1, 1, 65565, 1, 1, 65566, 1, 1, 65567, 1, 1, 131072, 1, 1, 131073, 1, 1, 131074, 0, 1, 131075, 0, 1, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, 0, 0, 131095, 0, 0, 131096, 0, 0, 131097, 0, 0, 131098, 0, 0, 131099, 0, 0, 131100, 0, 2, 131101, 0, 2, 131102, 1, 1, 131103, 1, 1, 196608, 1, 1, 196609, 1, 1, 196610, 0, 1, 196611, 0, 1, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 0, 0, 196634, 0, 0, 196635, 0, 0, 196636, 0, 2, 196637, 0, 2, 196638, 1, 1, 196639, 1, 1, 262144, 1, 1, 262145, 1, 1, 262146, 0, 1, 262147, 0, 1, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 0, 262166, 0, 0, 262167, 0, 0, 262168, 0, 0, 262169, 0, 0, 262170, 0, 0, 262171, 0, 0, 262172, 0, 2, 262173, 0, 2, 262174, 1, 1, 262175, 1, 1, 327680, 1, 1, 327681, 1, 1, 327682, 0, 1, 327683, 0, 1, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 0, 327702, 0, 0, 327703, 0, 0, 327704, 0, 0, 327705, 0, 0, 327706, 0, 0, 327707, 0, 0, 327708, 0, 2, 327709, 0, 2, 327710, 1, 1, 327711, 1, 1, 393216, 1, 1, 393217, 1, 1, 393218, 0, 1, 393219, 0, 1, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 393238, 0, 0, 393239, 0, 0, 393240, 0, 0, 393241, 0, 0, 393242, 0, 0, 393243, 0, 0, 393244, 0, 2, 393245, 0, 2, 393246, 1, 1, 393247, 1, 1, 458752, 1, 1, 458753, 1, 1, 458754, 0, 1, 458755, 0, 1, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 0, 458775, 0, 0, 458776, 0, 0, 458777, 0, 0, 458778, 0, 0, 458779, 0, 0, 458780, 0, 2, 458781, 0, 2, 458782, 1, 1, 458783, 1, 1, 524288, 1, 1, 524289, 1, 1, 524290, 0, 1, 524291, 0, 1, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 524313, 0, 0, 524314, 0, 0, 524315, 0, 0, 524316, 0, 2, 524317, 0, 2, 524318, 1, 1, 524319, 1, 1, 589824, 1, 1, 589825, 1, 1, 589826, 0, 1, 589827, 0, 1, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 2, 589853, 0, 2, 589854, 1, 1, 589855, 1, 1, 655360, 1, 1, 655361, 1, 1, 655362, 0, 1, 655363, 0, 1, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 0, 0, 655382, 0, 0, 655383, 0, 0, 655384, 0, 0, 655385, 0, 0, 655386, 0, 0, 655387, 0, 0, 655388, 0, 2, 655389, 0, 2, 655390, 1, 1, 655391, 1, 1, 720896, 1, 1, 720897, 1, 1, 720898, 0, 1, 720899, 0, 1, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 0, 720918, 0, 0, 720919, 0, 0, 720920, 0, 0, 720921, 0, 0, 720922, 0, 0, 720923, 0, 0, 720924, 0, 2, 720925, 0, 2, 720926, 1, 1, 720927, 1, 1, 786432, 1, 1, 786433, 1, 1, 786434, 0, 1, 786435, 0, 1, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0, 786455, 0, 0, 786456, 0, 0, 786457, 0, 0, 786458, 0, 0, 786459, 0, 0, 786460, 0, 2, 786461, 0, 2, 786462, 1, 1, 786463, 1, 1, 851968, 1, 1, 851969, 1, 1, 851970, 0, 1, 851971, 0, 1, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 851991, 0, 0, 851992, 0, 0, 851993, 0, 0, 851994, 0, 0, 851995, 0, 0, 851996, 0, 2, 851997, 0, 2, 851998, 1, 1, 851999, 1, 1, 917504, 1, 1, 917505, 1, 1, 917506, 0, 1, 917507, 0, 1, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 917520, 0, 0, 917521, 0, 0, 917522, 0, 0, 917523, 0, 0, 917524, 0, 0, 917525, 0, 0, 917526, 0, 0, 917527, 0, 0, 917528, 0, 0, 917529, 0, 0, 917530, 0, 0, 917531, 0, 0, 917532, 0, 2, 917533, 0, 2, 917534, 1, 1, 917535, 1, 1, 983040, 1, 1, 983041, 1, 1, 983042, 1, 1, 983043, 1, 1, 983044, 1, 1, 983045, 1, 1, 983046, 1, 1, 983047, 1, 1, 983048, 1, 1, 983049, 1, 1, 983050, 1, 1, 983051, 1, 1, 983052, 1, 1, 983053, 1, 1, 983054, 1, 1, 983055, 1, 1, 983056, 1, 1, 983057, 1, 1, 983058, 1, 1, 983059, 1, 1, 983060, 1, 1, 983061, 1, 1, 983062, 1, 1, 983063, 1, 1, 983064, 1, 1, 983065, 1, 1, 983066, 1, 1, 983067, 1, 1, 983068, 1, 1, 983069, 1, 1, 983070, 1, 1, 983071, 1, 1, 1048576, 1, 1, 1048577, 1, 1, 1048578, 1, 1, 1048579, 1, 1, 1048580, 1, 1, 1048581, 1, 1, 1048582, 1, 1, 1048583, 1, 1, 1048584, 1, 1, 1048585, 1, 1, 1048586, 1, 1, 1048587, 1, 1, 1048588, 1, 1, 1048589, 1, 1, 1048590, 1, 1, 1048591, 1, 1, 1048592, 1, 1, 1048593, 1, 1, 1048594, 1, 1, 1048595, 1, 1, 1048596, 1, 1, 1048597, 1, 1, 1048598, 1, 1, 1048599, 1, 1, 1048600, 1, 1, 1048601, 1, 1, 1048602, 1, 1, 1048603, 1, 1, 1048604, 1, 1, 1048605, 1, 1, 1048606, 1, 1, 1048607, 1, 1, 1114112, 1, 1, 1114113, 1, 1, 1114114, 1, 1, 1114115, 1, 1, 1114116, 1, 1, 1114117, 1, 1, 1114118, 1, 1, 1114119, 1, 1, 1114120, 1, 1, 1114121, 1, 1, 1114122, 1, 1, 1114123, 1, 1, 1114124, 1, 1, 1114125, 1, 1, 1114126, 1, 1, 1114127, 1, 1, 1114128, 1, 1, 1114129, 1, 1, 1114130, 1, 1, 1114131, 1, 1, 1114132, 1, 1, 1114133, 1, 1, 1114134, 1, 1, 1114135, 1, 1, 1114136, 1, 1, 1114137, 1, 1, 1114138, 1, 1, 1114139, 1, 1, 1114140, 1, 1, 1114141, 1, 1, 1114142, 1, 1, 1114143, 1, 1, 1179648, 1, 1, 1179649, 1, 1, 1179650, 1, 1, 1179651, 1, 1, 1179652, 1, 1, 1179653, 1, 1, 1179654, 1, 1, 1179655, 1, 1, 1179656, 1, 1, 1179657, 1, 1, 1179658, 1, 1, 1179659, 1, 1, 1179660, 1, 1, 1179661, 1, 1, 1179662, 1, 1, 1179663, 1, 1, 1179664, 1, 1, 1179665, 1, 1, 1179666, 1, 1, 1179667, 1, 1, 1179668, 1, 1, 1179669, 1, 1, 1179670, 1, 1, 1179671, 1, 1, 1179672, 1, 1, 1179673, 1, 1, 1179674, 1, 1, 1179675, 1, 1, 1179676, 1, 1, 1179677, 1, 1, 1179678, 1, 1, 1179679, 1, 1, 1245184, 1, 1, 1245185, 1, 1, 1245186, 1, 1, 1245187, 1, 1, 1245188, 1, 1, 1245189, 1, 1, 1245190, 1, 1, 1245191, 1, 1, 1245192, 1, 1, 1245193, 1, 1, 1245194, 1, 1, 1245195, 1, 1, 1245196, 1, 1, 1245197, 1, 1, 1245198, 1, 1, 1245199, 1, 1, 1245200, 1, 1, 1245201, 1, 1, 1245202, 1, 1, 1245203, 1, 1, 1245204, 1, 1, 1245205, 1, 1, 1245206, 1, 1, 1245207, 1, 1, 1245208, 1, 1, 1245209, 1, 1, 1245210, 1, 1, 1245211, 1, 1, 1245212, 1, 1, 1245213, 1, 1, 1245214, 1, 1, 1245215, 1, 1 )

[node name="Entities" type="YSort" parent="."]
script = ExtResource( 9 )

[node name="goblin2" parent="Entities" instance=ExtResource( 7 )]
position = Vector2( 144, 208 )
collision_mask = 7
stats = ExtResource( 5 )

[node name="goblin" parent="Entities" instance=ExtResource( 7 )]
position = Vector2( 880, 272 )
collision_mask = 7

[node name="knight" parent="Entities" instance=ExtResource( 10 )]
position = Vector2( 112, 272 )

[node name="player" parent="Entities" instance=ExtResource( 2 )]
position = Vector2( 784, 272 )

[node name="knight2" parent="Entities" instance=ExtResource( 10 )]
position = Vector2( 880, 144 )

[node name="grouind areas" type="Node2D" parent="."]

[node name="left_ground" type="Area2D" parent="grouind areas"]
position = Vector2( 74, 74 )
collision_layer = 32
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="grouind areas/left_ground"]
position = Vector2( 14, 174 )
shape = SubResource( 13 )

[node name="center_ground" type="Area2D" parent="grouind areas"]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="grouind areas/center_ground"]
position = Vector2( 512, 248 )
shape = SubResource( 15 )

[node name="right_ground" type="Area2D" parent="grouind areas"]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="grouind areas/right_ground"]
position = Vector2( 936, 248 )
shape = SubResource( 16 )

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="Canvas"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="turn_label" type="Label" parent="Canvas/UI"]
margin_left = 25.0
margin_top = 547.0
margin_right = 160.0
margin_bottom = 586.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
text = "Turns Passed = "
uppercase = true

[node name="speed_array_label" type="Label" parent="Canvas/UI"]
margin_left = 25.0
margin_top = 512.0
margin_right = 241.0
margin_bottom = 551.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
text = "Order of turns = "
uppercase = true

[node name="Console" parent="Canvas/UI" instance=ExtResource( 6 )]
margin_left = 700.0
margin_top = 454.0
margin_right = 700.0
margin_bottom = 454.0

[connection signal="area_entered" from="mouse_area" to="." method="_on_mouse_area_area_entered"]
[connection signal="area_exited" from="mouse_area" to="." method="_on_mouse_area_area_exited"]
[connection signal="body_entered" from="grouind areas/left_ground" to="." method="_on_left_ground_body_entered"]
[connection signal="body_exited" from="grouind areas/left_ground" to="." method="_on_left_ground_body_exited"]
[connection signal="body_entered" from="grouind areas/center_ground" to="." method="_on_center_area_body_entered"]
[connection signal="body_exited" from="grouind areas/center_ground" to="." method="_on_center_area_body_exited"]
[connection signal="body_entered" from="grouind areas/right_ground" to="." method="_on_right_ground_body_entered"]
[connection signal="body_exited" from="grouind areas/right_ground" to="." method="_on_right_ground_body_exited"]

[editable path="Canvas/UI/Console"]
